syntax = "proto3";

option go_package = "pb/gen";

package ukama.lookup.v1;

import "validator.proto";
import "google/protobuf/any.proto";

service EventNotificationService {
    rpc EventNotification(Event) returns (EventResponse);
}

message Event {
    string routingKey = 1 [(validator.field) = {string_not_empty: true}];
    google.protobuf.Any msg = 2;
}

message EventResponse {

}